# qutebrowser

./: pyproject.toml
qutebrowser/browser/: downloads.py
qutebrowser/config/: configdata.yml
