[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.check-manifest]
ignore = [
    "qutebrowser/git-commit-id",
    "qutebrowser/html/doc",
    "qutebrowser/html/doc/*",
    "qutebrowser/html/doc/img/cheatsheet-*.png",
    "*/__pycache__",
]

[project]
name = "qutebrowser"
version = "3.0.2-mod"
description = "qutebrowser fork"
readme = "README.asciidoc"
requires-python = ">3.9.0"
dependencies = []
