[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.check-manifest]
ignore = [
    "qutebrowser/git-commit-id",
    "qutebrowser/html/doc",
    "qutebrowser/html/doc/*",
    "qutebrowser/html/doc/img/cheatsheet-*.png",
    "*/__pycache__",
]

[project]
name = "qutebrowser"
version = "3.0.2+uv"
description = "qutebrowser fork"
readme = "README.md"
requires-python = ">3.9.0"
dependencies = [
    "adblock==0.6.0",
    "colorama==0.4.6",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "pygments==2.19.2",
    "pyobjc-core>=11.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-cocoa>=11.1 ; sys_platform == 'darwin'",
    "pyyaml==6.0.3",
]
